--- a/app/src/main/res/layout/item_grid_layout.xml
+++ b/app/src/main/res/layout/item_grid_layout.xml
@@ -5,10 +5,8 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/item_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:text="This is footer" />
+        android:padding="16dp" />
 </LinearLayout>
